--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bip39": "^3.1.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "ethereumjs-tx": "1.3.7",
+    "ethereumjs-util": "^7.1.5",
+    "ethereumjs-wallet": "^1.0.2",
+    "vant": "^4.9.9",
+    "vue": "^3.2.13",
+    "web3": "^4.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +24,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-polyfill-webpack-plugin": "^4.0.0",
+    "unplugin-vue-components": "^0.27.4"
   },
   "eslintConfig": {
     "root": true,
