--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vant/auto-import-resolver": "^1.2.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-polyfill-webpack-plugin": "^4.0.0",
+    "unplugin-auto-import": "^0.18.5",
     "unplugin-vue-components": "^0.27.4"
   },
   "eslintConfig": {
