--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "bip39": "^3.1.0",
     "core-js": "^3.8.3",
+    "ethereumjs-icap": "^0.3.2",
     "ethereumjs-tx": "1.3.7",
     "ethereumjs-util": "^7.1.5",
-    "ethereumjs-wallet": "^1.0.2",
+    "ethereumjs-wallet": "^2.0.0",
     "less": "^4.2.0",
+    "store.js": "^1.0.4",
     "vant": "^4.9.9",
     "vue": "^3.2.13",
     "web3": "^4.15.0"
