--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "ethereumjs-icap": "^0.3.2",
     "ethereumjs-tx": "1.3.7",
     "ethereumjs-util": "^7.1.5",
-    "ethereumjs-wallet": "^2.0.0",
+    "ethereumjs-wallet": "^1.0.2",
     "less": "^4.2.0",
     "store.js": "^1.0.4",
+    "store2": "^2.14.3",
     "vant": "^4.9.9",
     "vue": "^3.2.13",
     "web3": "^4.15.0"
